[tool.poetry]
name = "coding-challenges"
version = "0.1.0"
description = ""
authors = ["Moshe <moshe.tarter@sightdx.com>"]
readme = "README.md"
packages = [{include = "coding_challenges"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
